Header spacing fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2027,6 +2027,9 @@ input:focus:-ms-input-placeholder {
 	.btn.responsive-menu {
 	    display: block
 	}
+    .inner {
+        padding-top: 54px;
+    }
 	.navbar .nav,
 	.navbar .dropup,
 	.navbar .dropdown,
